mdapipkg/objects/Site_Content__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Description</relationshipLabel>
        <relationshipName>Product_Description</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Contents</pluralLabel>
    <recordTypes>
        <fullName>Page_Content</fullName>
        <active>true</active>
        <label>Page Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Description</fullName>
        <active>true</active>
        <label>Product Description</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>